--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "file-system": "^2.2.2",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^5.11.9",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2",
+    "node-static": "^0.7.11"
   }
 }
